# bge-m3-onnx-rust

./: .gitignore  BGE_M3_RETRIEVAL.md  Cargo.toml  ONNX_BUILD_GUIDE.md  README.md
.cargo/: config.toml
src/: lib.rs  main.rs
tests/: embedding_test.rs
